--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /src/__pycache__/stock_table_lib.cpython-310.pyc
 /src/__pycache__/stock_table_lib.cpython-38.pyc
+/src1/__pycache__/stock_data_lib.cpython-310.pyc
+/src1/__pycache__/stock_table_lib.cpython-310.pyc
