--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /src1/__pycache__/stock_data_lib.cpython-310.pyc
 /src1/__pycache__/stock_table_lib.cpython-310.pyc
 /src1/__pycache__/stock_data_lib.cpython-38.pyc
+/src1/__pycache__/functions_fundamental_valuation.cpython-38.pyc
+/src1/__pycache__/functions_gain.cpython-38.pyc
+/src1/__pycache__/functions_hist.cpython-38.pyc
+/src1/__pycache__/functions_info.cpython-38.pyc
